# crc/api.yml
@@ -1062,9 +1062,9 @@ components:
         user_uid:
           type: string
           example: dhf8r
-        protocol_builder_status:
+        status:
           type: string
-          enum: ['incomplete', 'active', 'hold', 'open', 'abandoned']
+          enum: ['in progress', 'hold', 'open for enrollment', 'abandoned']
           example: done
         sponsor:
           type: string
