# crc/models/study.py
@@ -1,4 +1,5 @@
 import datetime
+import enum
 import json
 
 import marshmallow
@@ -14,12 +15,26 @@ from crc.models.workflow import WorkflowSpecCategoryModel, WorkflowState, Workfl
     WorkflowModel
 
 
+class StudyStatus(enum.Enum):
+    in_progress = 'in progress'
+    hold = 'hold'
+    open_for_enrollment = 'open for enrollment'
+    abandoned = 'abandoned'
+
+
+class IrbStatus(enum.Enum):
+    incomplete_in_protocol_builder = 'incomplete in protocol builder'
+    completed_in_protocol_builder = 'completed in protocol builder'
+    hsr_assigned = 'hsr number assigned'
+
+
 class StudyModel(db.Model):
     __tablename__ = 'study'
     id = db.Column(db.Integer, primary_key=True)
     title = db.Column(db.String)
     last_updated = db.Column(db.DateTime(timezone=True), default=func.now())
-    protocol_builder_status = db.Column(db.Enum(ProtocolBuilderStatus))
+    status = db.Column(db.Enum(StudyStatus))
+    irb_status = db.Column(db.Enum(IrbStatus))
     primary_investigator_id = db.Column(db.String, nullable=True)
     sponsor = db.Column(db.String, nullable=True)
     hsr_number = db.Column(db.String, nullable=True)
@@ -29,7 +44,6 @@ class StudyModel(db.Model):
     requirements = db.Column(db.ARRAY(db.Integer), nullable=True)
     on_hold = db.Column(db.Boolean, default=False)
     enrollment_date = db.Column(db.DateTime(timezone=True), nullable=True)
-    changes_history = db.Column(db.JSON, nullable=True)
 
     def update_from_protocol_builder(self, pbs: ProtocolBuilderStudy):
         self.hsr_number = pbs.HSRNUMBER
@@ -37,11 +51,13 @@ class StudyModel(db.Model):
         self.user_uid = pbs.NETBADGEID
         self.last_updated = pbs.DATE_MODIFIED
 
-        self.protocol_builder_status = ProtocolBuilderStatus.active
+        self.irb_status = IrbStatus.incomplete_in_protocol_builder
+        self.status = StudyStatus.in_progress
         if pbs.HSRNUMBER:
-            self.protocol_builder_status = ProtocolBuilderStatus.open
+            self.irb_status = IrbStatus.hsr_assigned
+            self.status = StudyStatus.open_for_enrollment
         if self.on_hold:
-            self.protocol_builder_status = ProtocolBuilderStatus.hold
+            self.status = StudyStatus.hold
 
 
 class WorkflowMetadata(object):
@@ -112,15 +128,15 @@ class CategorySchema(ma.Schema):
 class Study(object):
 
     def __init__(self, title, last_updated, primary_investigator_id, user_uid,
-                 id=None,
-                 protocol_builder_status=None,
+                 id=None, status=None, irb_status=None,
                  sponsor="", hsr_number="", ind_number="", categories=[],
                  files=[], approvals=[], enrollment_date=None, **argsv):
         self.id = id
         self.user_uid = user_uid
         self.title = title
         self.last_updated = last_updated
-        self.protocol_builder_status = protocol_builder_status
+        self.status = status
+        self.irb_status = irb_status
         self.primary_investigator_id = primary_investigator_id
         self.sponsor = sponsor
         self.hsr_number = hsr_number
@@ -142,25 +158,25 @@ class Study(object):
         """As the case for update was very reduced, it's mostly and specifically
         updating only the study status and generating a history record
         """
-        pb_status = ProtocolBuilderStatus(self.protocol_builder_status)
+        status = StudyStatus(self.status)
         study_model.last_updated = datetime.datetime.now()
-        study_model.protocol_builder_status = pb_status
+        study_model.status = status
 
-        if pb_status == ProtocolBuilderStatus.open:
+        if status == StudyStatus.open_for_enrollment:
             study_model.enrollment_date = self.enrollment_date
 
-        change = {
-            'status': ProtocolBuilderStatus(self.protocol_builder_status).value,
-            'comment': '' if not hasattr(self, 'comment') else self.comment,
-            'date': str(datetime.datetime.now())
-        }
+        # change = {
+        #     'status': ProtocolBuilderStatus(self.protocol_builder_status).value,
+        #     'comment': '' if not hasattr(self, 'comment') else self.comment,
+        #     'date': str(datetime.datetime.now())
+        # }
 
-        if study_model.changes_history:
-            changes_history = json.loads(study_model.changes_history)
-            changes_history.append(change)
-        else:
-            changes_history = [change]
-        study_model.changes_history = json.dumps(changes_history)
+        # if study_model.changes_history:
+        #     changes_history = json.loads(study_model.changes_history)
+        #     changes_history.append(change)
+        # else:
+        #     changes_history = [change]
+        # study_model.changes_history = json.dumps(changes_history)
 
 
     def model_args(self):
@@ -174,7 +190,7 @@ class Study(object):
 class StudyForUpdateSchema(ma.Schema):
 
     id = fields.Integer(required=False, allow_none=True)
-    protocol_builder_status = EnumField(ProtocolBuilderStatus, by_value=True)
+    status = EnumField(StudyStatus, by_value=True)
     hsr_number = fields.String(allow_none=True)
     sponsor = fields.String(allow_none=True)
     ind_number = fields.String(allow_none=True)
@@ -196,7 +212,8 @@ class StudySchema(ma.Schema):
     id = fields.Integer(required=False, allow_none=True)
     categories = fields.List(fields.Nested(CategorySchema), dump_only=True)
     warnings = fields.List(fields.Nested(ApiErrorSchema), dump_only=True)
-    protocol_builder_status = EnumField(ProtocolBuilderStatus, by_value=True)
+    protocol_builder_status = EnumField(StudyStatus, by_value=True)
+    status = EnumField(StudyStatus, by_value=True)
     hsr_number = fields.String(allow_none=True)
     sponsor = fields.String(allow_none=True)
     ind_number = fields.String(allow_none=True)
